force-app/main/default/objects/Store_Closure__c/Store_Closure__c.object-meta.xml
<CustomObject>
    <description>Blocks appointment availability for a Store on a specific date. When Store_Time_Slot__c is blank, the entire store is closed for that date (Holiday/Closure). When populated, only that single slot is blocked (Blackout/Restriction).</description>
    <label>Store Closure</label>
    <nameField>
        <displayFormat>CLOSURE-{000000}</displayFormat>
        <label>Closure Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Closures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>