force-app/main/default/objects/Store_Closure__c/fields/Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Closure_Date__c</fullName>
    <description>Required in practice: closure records without a date are ignored by the appointment APIs.</description>
    <label>Closure Date</label>
    <type>Date</type>
</CustomField>