force-app/main/default/objects/Store_Closure__c/fields/Store_Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Store_Time_Slot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional. When set, this closure blocks only this specific slot on Closure_Date__c (blackout/restriction). When blank, the entire store is blocked for that date (holiday/closure).</description>
    <label>Store Time Slot</label>
    <referenceTo>Store_Time_Slot__c</referenceTo>
    <relationshipLabel>Store Closures</relationshipLabel>
    <relationshipName>Store_Closures</relationshipName>
    <type>Lookup</type>
</CustomField>