force-app/main/default/objects/Store_Closure__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&quot;Closure&quot;</defaultValue>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Closure</fullName>
                <default>true</default>
                <label>Closure</label>
            </value>
            <value>
                <fullName>Blackout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>